- Fixed an alignment issue on mobile for the messageInfo buttons - Fixed bug with radioactive theme, where opening the kiwi options on mobile would not display correctly ( no background colour) - Added message info styling to all existing themes

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -491,6 +491,49 @@
     border-left-color: #80ab52;
 }
 
+/* MessageInfo */
+.kiwi-messagelist-message--info-open {
+    border-top: 1px solid #909090;
+    border-bottom: 1px solid #909090;
+}
+
+/* MessageInfo URLs */
+.kiwi-messageinfo-urls {
+    border-top: 1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.kiwi-messageinfo-url .u-button-secondary {
+  color: #010101;
+  border: 1px solid #010101;
+  background: none;
+  text-shadow: none;
+}
+
+.kiwi-messageinfo-urls .kiwi-messageinfo-url:last-of-type {
+    margin-bottom: 0;
+}
+
+/* Start button stying */
+.kiwi-messageinfo-actions .u-link {
+    padding: 5px 10px;
+    text-align: center;
+    border: 1px solid #010101;
+    color: #010101;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+.kiwi-messageinfo-actions .u-link.kick-user {
+    background: #f6c358;
+    color: #fff;
+}
+
+.kiwi-messageinfo-actions .u-link.ban-user {
+    background: #fcb46e;
+    color: #fff;
+}
+
 /* Network Settings ( NetworkSettings.vue ) */
 .kiwi-networksettings .kiwi-title {
     background: #a2846e;
