--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -637,16 +637,6 @@
 }
 
 /* Start button stying */
-.kiwi-messageinfo-actions{
-  width: 100%;
-  text-align: left;
-}
-
-.kiwi-messageinfo-opbuttons {
-  float: right;
-  width: auto;
-}
-
 .kiwi-messageinfo-actions .u-link {
     padding: 5px 10px;
     text-align: center;
