--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -439,9 +439,7 @@
 .kiwi-messagelist .kiwi-messagelist-body {
     color: #adadad;
 }
-.kiwi-messagelist-message--info-open {
-    background: #f6f6f6;
-}
+
 .kiwi-messageinfo-urls {
     border-top: 1px solid #444;
 }
@@ -553,6 +551,51 @@
 .kiwi-messagelist-message--compact .kiwi-messagelist-message-notice:hover, {
     border-left-color: #80ab52;
 }
+
+
+/* MessageInfo */
+.kiwi-messagelist-message--info-open {
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+/* MessageInfo URLs */
+.kiwi-messageinfo-urls {
+    border-top: 1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.kiwi-messageinfo-url .u-button-secondary {
+  color: #f1f1f1;
+  border: 1px solid #f1f1f1;
+  background: none;
+  text-shadow: none;
+}
+
+.kiwi-messageinfo-urls .kiwi-messageinfo-url:last-of-type {
+    margin-bottom: 0;
+}
+
+/* Start button stying */
+.kiwi-messageinfo-actions .u-link {
+    padding: 5px 10px;
+    text-align: center;
+    border: 1px solid #f1f1f1;
+    color: #f1f1f1;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+.kiwi-messageinfo-actions .u-link.kick-user {
+    background: #f6c358;
+    color: #fff;
+}
+
+.kiwi-messageinfo-actions .u-link.ban-user {
+    background: #fcb46e;
+    color: #fff;
+}
+
 
 /* Network Settings ( NetworkSettings.vue ) */
 .kiwi-networksettings-section {
@@ -778,9 +821,8 @@
 }
 
 .kiwi-messageinfo {
-    background: #f6f6f6;
-    border-bottom: 2px #ddd solid;
-    border-top: 1px #ddd dashed;
+    border-bottom: 2px #f1f1f1 solid;
+    border-top: 1px #f1f1f1 solid;
 }
 
 .kiwi-statebrowser-usermenu-avatar {
